--- a/en/o/on first-name terms.742239.wikitext
+++ b/en/o/on first-name terms.742239.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Adjective===
-'''[[on]] [[first name]] [[terms]]'''
+{{head|en|adjective|head=[[on]] [[first name]] [[terms]]}}
 
 # [[familiar]] with someone, such that one can address that person by his or her first name.
 # {{lb|en|by extension|humorous}} in regular [[contact]] with a person or [[organisation]].
