--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -174,14 +174,17 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 {{trans-bottom}}
 
 ====See also====
+{{top2}}
 * {{l|en|truncheon}}
 * {{l|en|club}}
 * {{l|en|cudgel}}
 * {{l|en|stick}}
+{{mid2}}
 * {{l|en|baton}}
 * {{l|en|bludgeon}}
 * {{l|en|rod}}
 * {{l|en|cane}}
+{{bottom}}
 
 ===Verb===
 {{en-verb}}
