--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -169,7 +169,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 * Tagalog: {{t|tl|kalupunan}}
 * Thai: {{t|th|พนักงาน|tr=pá-nák ngaan|sc=Thai}}
 * Turkish: {{t+|tr|personel}}
-* Uyghur: {{t|ug|خىزمەتچى|tr=xizmetchi|sc=ug-Arab}}
+* Uyghur: {{t|ug|خىزمەتچى|sc=ug-Arab}}
 * Vietnamese: {{t+|vi|nhân viên}}
 * Volapük: {{qualifier|collective}} {{t+|vo|pösodef}}
 {{trans-bottom}}
