--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -27,6 +27,7 @@ From the {{w|Gerber}} Childrenswear brand name {{w|Onesies}}. The name became [[
 * Finnish: {{t+|fi|potkupuku}}
 * French: {{t+|fr|body|m}}
 {{trans-mid}}
+* Korean: {{t|ko|바디슈트|sc=Kore}}
 * Romanian: {{t|ro|body}}
 * Russian: {{t-needed|ru}}
 {{trans-bottom}}
