--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -54,6 +54,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Swedish: {{t+|sv|fyrhörning|c}}
 * Tagalog: {{t|tl|patsiha}}, {{t|tl|patgilid}}
 * Telugu: {{t+|te|చతుర్భుజి}}
+* Zazaki: {{t|zza|çehardag}}, {{t|zza|çardag}}
 {{trans-bottom}}
 
 ===Adjective===
