--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -43,7 +43,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 #: {{ux|en|you poor '''thing''';&nbsp; she's a funny old '''thing''', but her heart's in the right place;&nbsp; I met a pretty blond '''thing''' at the bar}}
 # That which matters; the [[crux]].
 #: {{ux|en|that's the '''thing''': we don't know where he went;&nbsp; the '''thing''' is, I don't have any money}}
-# {{non-gloss definition|Used after a noun to refer dismissively to the situation surrounding the noun's referent.|lang=en}}
+# {{non-gloss definition|Used after a noun to refer dismissively to the situation surrounding the noun's referent.}}
 #: {{ux|en|Oh yeah, I'm supposed to promote that vision '''thing'''.}}
 #* '''1914''', Eugene Gladstone O'Neill, ''[http://www.eoneill.com/texts/movie/contents.htm The Movie Man]'' [playscript]:
 #*: ''Don’t forget to have Gomez postpone that shooting '''thing'''.'' {{qualifier|in reference to the execution of Fernandez}}
