--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -8,6 +8,7 @@ From {{etyl|fro|en}} {{m|fro|consumer}}, from {{etyl|la|en}} {{m|la|consumere}}.
 * {{a|UK}} {{IPA|/kənˈsjuːm/|lang=en}}
 * {{a|US}} {{enPR|kən-so͞om}}, {{IPA|/kənˈsuːm/|lang=en}}
 * {{audio|en-us-consume.ogg|Audio (US)|lang=en}}
+* {{audio|en-uk-consume.ogg|Audio (UK)|lang=en}}
 
 ===Verb===
 {{en-verb|consum}}
