--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -118,6 +118,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Bulgarian: {{t+|bg|вещ|f|sc=Cyrl}}, {{t+|bg|не́що|n|sc=Cyrl}}
 * Burmese: {{t+|my|အရာ|tr=aja|sc=Mymr}}
 * Catalan: {{t+|ca|cosa|f}}
+* Chichewa: {{t|ny|chinthu}}
 * Chinese:
 *: Cantonese: {{t|yue|東西}}, {{t|yue|东西|tr=dung1 sai1}}, {{t|yue|物|tr=mat6}}, {{t|yue|事物|tr=si6 mat6}}
 *: Mandarin: {{t+|cmn|東西|sc=Hani}}, {{t+|cmn|东西|tr=dōngxi|sc=Hani}}, {{t+|cmn|物|tr=wù|sc=Hani}}, {{t+|cmn|事物|tr=shìwù|sc=Hani}}
