--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -176,6 +176,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Tagalog: {{t|tl|mutit}}, {{t|tl|bising}}, {{t|tl|ardilya}}
 * Tamil: {{t+|ta|அணில்|sc=Taml}}
 * Taos: {{t|twf|c’ùwala’ána}}
+* Tashelhit: {{t|shi|ⴰⵏⵥⵉⴹ|m|tr=anẓiḍ}}, {{t|shi|ⴰⴳⴱⵓⵔ|m|tr=agbur}} {{qualifier|Atlantoxerus getulus}}
 * Tatar: {{t+|tt|тиен}}
 * Telugu: {{t+|te|ఉడుత}}
 * Thai: {{t+|th|กระรอก|tr=grà rôk|sc=Thai}}
