--- a/en/m/moon shot.720228.wikitext
+++ b/en/m/moon shot.720228.wikitext
@@ -1,21 +1,33 @@
 {{also|moonshot}}
 ==English==
+{{was wotd|2017|July|20}}
 
-===Alternative forms===
-* {{l|en|moonshot}}
+===Pronunciation===
+[[File:Aldrin Apollo 11 (jha).jpg|thumb|American [[astronaut]] {{w|Buzz Aldrin}} on the [[Moon]] on 20 July 1969, photographed by fellow astronaut {{w|Neil A. Armstrong}}]]
+
+* {{a|RP}} {{IPA|/ˈmuːn ʃɒt/|lang=en}}
+* {{a|GA}} {{IPA|/ˈmuːn ʃɑt/|lang=en}}
 
 ===Noun===
 {{en-noun}}
 
-# The launching of a [[spacecraft]] or an [[object]] to [[orbit]] or [[land]] on the [[Moon]].
-#* {{quote-news|date=2017-02-27|author=Samantha Masunaga|title=SpaceX plans to send two private astronauts to circle the moon — on their own dime|work=Los Angeles Times|url=http://www.latimes.com/business/la-fi-spacex-announcement-20170227-story.html|passage=The weeklong '''moon shot''' would make a close flyby of the moon’s surface, “go quite a bit further out into deep space” and then loop back to Earth, Musk said. The spacecraft will not try to land on the surface of the moon.}}
-# [[throw|Throw]]ing or [[hit]]ting a [[ball]] with a high [[trajectory]].
-# {{lb|en|figuratively}} An [[expensive]], [[hard]] or [[unlikely]] [[task]] of great potential [[impact]].
-#* {{quote-news|date=2016-07-28|author=Nicky Woolf|title=Alphabet's revenue up to $21.5bn off the back of mobile and video ads|work=The Guardian|url=https://www.theguardian.com/technology/2016/jul/28/alphabet-earnings-revenue-up-google-mobile-advertising|passage=Revenue at Alphabet’s Other Bets division – which includes broadband business Google Fiber, home automation products Nest, self-driving cars and X, the research facility that works on “'''moon shot'''” ventures – rose 150% to $185m, while operating losses widened to $859m.|translation=}}
-#* {{quote-news|date=2016-10-10|author=|title=Editorial October|work=Illawarra Mercury|url=http://www.illawarramercury.com.au/story/4218925/another-victory-in-the-world-war-on-cancer/|passage=In the US, Vice President Joe Biden has been labelled as the “Cancer Advocate in Chief”, charged in that country by President Obama with leading the fight to find a cure after losing his son to brain cancer last year. Biden has related the fight to find a cure to the quest to land man on the moon. “I believe that we need a '''moon shot''' in this country to cure cancer,” he said.}}
+# The [[launching]] of a [[spacecraft]] or an [[object#Noun|object]] to [[orbit#Verb|orbit]] or [[land#Verb|land]] on the [[Moon]].
+#* {{quote-journal|author=Samantha Masunaga|author2=Russ Mitchell|title=SpaceX plans to send two private astronauts to circle the moon&nbsp;– on their own dime|newspaper=Los Angeles Times|url=http://www.latimes.com/business/la-fi-spacex-announcement-20170227-story.html|archiveurl=https://web-beta.archive.org/web/20170406064522/http://www.latimes.com/business/la-fi-spacex-announcement-20170227-story.html|archivedate=6 April 2017|date=27 February 2017|passage=The weeklong '''moon shot''' would make a close flyby of the moon’s surface, “go quite a bit further out into deep space” and then loop back to Earth, Musk said. The spacecraft will not try to land on the surface of the moon.}}
+# {{lb|en|sports}} [[throw#Verb|Throwing]] or [[hit#Verb|hitting]] a [[ball#Noun|ball]] with a high [[trajectory]].
+# {{lb|en|figuratively}} An [[expensive]], [[hard]], or [[unlikely]] [[task#Noun|task]] of great [[potential]] [[impact#Noun|impact]].
+#* {{quote-journal|author=Nicky Woolf|title=Alphabet’s revenue up to $21.5bn off the back of mobile and video ads|url=https://www.theguardian.com/technology/2016/jul/28/alphabet-earnings-revenue-up-google-mobile-advertising|archiveurl=https://web.archive.org/web/20170301173403/https://www.theguardian.com/technology/2016/jul/28/alphabet-earnings-revenue-up-google-mobile-advertising|archivedate=1 March 2017|newspaper={{w|The Guardian}}|location=London|date=2016-07-28|passage=Revenue at Alphabet’s Other Bets division&nbsp;– which includes broadband business Google Fiber, home automation products Nest, self-driving cars and X, the research facility that works on "'''moon shot'''" ventures&nbsp;– rose 150% to $185m, while operating losses widened to $859m.}}
+#* {{quote-journal|title=Editorial October 11 2016|url=http://www.illawarramercury.com.au/story/4218925/another-victory-in-the-world-war-on-cancer/|archiveurl=https://web.archive.org/web/20161213203318/http://www.illawarramercury.com.au/story/4218925/another-victory-in-the-world-war-on-cancer/|archivedate=13 December 2016|newspaper={{w|Illawarra Mercury}}|location=Wollongong, N.S.W.|date=10 October 2016|passage=In the US, Vice President {{w|Joe Biden}} has been labelled as the "Cancer Advocate in Chief", charged in that country by President [[w:Barack Obama|[Barack] Obama]] with leading the fight to find a cure after losing his son to brain cancer last year. Biden has related the fight to find a cure to the quest to land man on the moon. "I believe that we need a '''moon shot''' in this country to cure cancer," he said.}}
+
+====Alternative forms====
+* {{l|en|moonshot}}
 
 ====Related terms====
 * {{l|en|shoot the moon}}
+
+===External links===
+* {{pedia|moonshot|moonshot (disambiguation)}}
+
+[[Category:en:Moons]]
 
 [[fr:moon shot]]
 [[ta:moon shot]]
