--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -92,7 +92,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 *: Jawi: {{t|ms|انجيڠ اءير|sc=Arab}}, {{t|ms|برڠ٢|sc=Arab}}
 * Maltese: {{t|mt|lutra}}
 * Manx: {{t|gv|dooarchoo|m}}, {{t|gv|moddey ushtey|m}}
-* Mi'kmaq: {{t|mic|giwnig}}
+* Mi'kmaq: {{t|mic|giwnig|an}}
 * Navajo: {{t|nv|tábąąstíín}}
 * Norwegian:
 *: Bokmål: {{t+|nb|oter|m}}
@@ -139,7 +139,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Vietnamese: {{t+|vi|rái cá}}
 * Volapük: {{t+|vo|lutar}}
 * Walloon: {{t+|wa|lote}}
-* Welsh: {{t|cy|dyfrgi}}, {{t|cy|dwrgi|m}}
+* Welsh: {{t|cy|dyfrgi|m}}, {{t|cy|dwrgi|m}}
 * West Coast Bajau: {{t|bdr|dongor}}, {{t|bdr|embirud}}
 * West Frisian: {{t|fy|fiskotter}}
 * Yiddish: {{t|yi|ווידרע|f}}
