--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -28,7 +28,7 @@
 * Catalan: {{t-needed|ca}}
 * Chinese:
 *: Mandarin: {{t+|cmn|弃权|sc=Hani}}, {{t+|cmn|逃避|sc=Hani}}
-* Czech: {{t-needed|cs}}
+* Czech: {{t|cs|hlasovat nohama}}
 * Dutch: {{t-needed|nl}}
 * Finnish: {{t|fi|äänestää jaloillaan}}
 * French: {{t|fr|aller à la pêche}}, {{t|fr|voter avec ses pieds}}
