--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -29,8 +29,8 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 * Finnish: {{t+|fi|genetti}}
 * French: {{t+|fr|genette|f}}
 * Georgian: {{t|ka|ვივერა|sc=Geor}}
-{{trans-mid}}
 * German: {{t|de|Genette|n}}, {{t|de|Ginsterkatze|f}}
+{{trans-mid}}
 * Hungarian: {{t|hu|petymeg}}
 * Italian: {{t|it|genetta|f}}
 * Navajo: {{t|nv|dlǫ́ʼiitsoh áłtsʼózígíí}}
@@ -39,6 +39,7 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 * Russian: {{t+|ru|гене́тта|f}}, {{t|ru|гене́та|f}}
 * Spanish: {{t+|es|jineta|f}}, {{t+|es|gineta|f}}
 * Swahili: {{t|sw|kanu}}
+* Wolof: {{t|wo|yoolaan}}
 {{trans-bottom}}
 
 ===Etymology 2===
