--- a/en/t/Tyneside.773762.wikitext
+++ b/en/t/Tyneside.773762.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From (River) {{m|en|Tyne}} + {{m|en|side}}.
+{{compound|en|Tyne|side}}
 
 ===Proper noun===
 {{en-proper noun}}
