--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -111,6 +111,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Quechua: {{t|qu|watai}}
 * Russian: {{t+|ru|свя́зывать|impf}}, {{t+|ru|свя́зать|pf}}
 * Saterland Frisian: {{t|stq|biende}}
+* Spanish: {{t+|es|atar}}
 * Swedish: {{t+|sv|binda}}
 * Thai: {{t-needed|th}}
 * Vietnamese: {{t-needed|vi}}
