--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -78,6 +78,7 @@ From medieval {{etyl|la|en}} {{m|la|Bosphorus}}, from {{etyl|grc|en}} {{m|grc|Β
 * Low German: {{t|nds|Bosporus}}
 * Luxembourgish: {{t|lb|Bosporus}}
 * Macedonian: {{t|mk|Босфор|m}}
+* Malay: {{t|ms|Selat Bosphorus}}
 * Norwegian: {{t|no|Bosporos}}
 * Occitan: {{t|oc|Bosfòr|m}}
 * Old English: {{t|ang|Bosporos}}
