--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -11,8 +11,9 @@
 
 # In a [[boil]]; [[boiling]]. {{defdate|First attested in the mid 19<sup>th</sup> century.}}<ref name=SOED>{{R:SOED5|page=6}}</ref>
 #: ''In the kitchen several pots were '''aboil'''.''
-# Figuratively, heated up; [[excited]]. {{defdate|First attested in the mid 19<sup>th</sup> century.}}<ref name=SOED/>
-#: ''In the drawing room, several conversations were '''aboil'''.''
+# {{lb|en|figurative}} Heated up; [[excited]]. {{defdate|First attested in the mid 19<sup>th</sup> century.}}<ref name=SOED/>
+#* '''1981''', ''Antæus'' (issues 43-46, page 7)
+#*: At ten o'clock on the morning of his third visit, Pablo found himself '''aboil''' with rage and sweat, glaring into the druggist's thick horn-rimmed spectacles in an attempt to engage the dead bug eyes behind them.
 
 ====Translations====
 {{trans-top|boiling}}
