--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -202,7 +202,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Greek:
 *: Ancient: {{t|grc|τότε}}, {{t|grc|ἄρα}}, {{t|grc|ἔπειτα}}
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|majd}}
-* Italian: {{t+|it|poi}}
+* Italian: {{t+|it|poi}}, {{t+|it|quindi}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|次に|tr=tsugi-ni}}
 {{trans-mid}}
 * Kurdish: {{t+|ku|paşî}}, {{t+|ku|dûre}}, {{t+|ku|piştre}}, {{t+|ku|dûvre}}, {{t|ku|peyre}}
