--- a/en/o/off one's rocket.801514.wikitext
+++ b/en/o/off one's rocket.801514.wikitext
@@ -3,12 +3,10 @@
 ===Etymology===
 A mishearing or reinventing of the expression {{m|en|off one's rocker|}}.
 
-===Adjective===
-{{head|en|adjective}}
+===Prepositional phrase===
+{{en-PP}}
 
 # {{lb|en|malapropism}} [[barmy|Barmy]]; [[crazy]]; [[insane]].
 
 ====Quotations====
 * {{seeCites}}
-
-[[Category:English prepositional phrases]]
