--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -246,7 +246,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 ====Noun====
 {{en-noun|s|at}}
 
-# {{alt form|att|lang=en}} {{qual|Laos currency unit|lang=en}}
+# {{alt form|att|lang=en}} {{gloss|Laos currency unit}}
 
 ===Statistics===
 * {{rank|you|not|be|20|at|by|on|her}}
