--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -126,6 +126,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{trans-mid}}
 * Japanese: {{t|ja|譜表|tr=fuhyō|sc=Jpan}}, {{t|ja|五線|tr=gosen|sc=Jpan}}
 * Macedonian: {{t|mk|петолиние|n|tr=petolínie}}
+* Maori: {{t|mi|tārawa }}
 * Occitan: {{t|oc|portada|f}}
 * Polish: {{t+|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
