--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -167,7 +167,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Mwani: {{t|wmw|kinu}}
 * Norwegian: {{t+|no|ting|m}}, {{t|no|dings|m}}, {{t+|no|greie|f}}
 * Old Church Slavonic:
-*: Cyrillic: {{t|cu|вєшть|f|sc=Cyrs}}
+*: Cyrillic: {{t|cu|вещь|f}}
 * Old English: {{t|ang|þing|n}}
 * Persian: {{t+|fa|چیز|tr=čiz|sc=fa-Arab}}
 * Polish: {{t+|pl|rzecz|f}}, {{t+|pl|coś|n}}
