--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -14,6 +14,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 * Bulgarian: {{t+|bg|изброявам|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|枚举|tr=méijǔ}}
+* Czech: {{t|cs|vyjmenovat|pf}}
 * Dutch: {{t|nl|uittellen}}
 * Finnish: {{t+|fi|luetella}}
 * French: {{t+|fr|énoncer}}
