--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -1,5 +1,6 @@
 {{also|x factor|X-factor|x-factor}}
-{{wikipedia}}
+{{wikipedia|X Factor (disambiguation)}}
+
 ==English==
 
 ===Alternative forms===
