--- a/en/n/nonbelligerent.776152.wikitext
+++ b/en/n/nonbelligerent.776152.wikitext
@@ -1,11 +1,16 @@
 ==English==
 
+===Etymology===
+{{prefix|en|non|belligerent}}
+
 ===Adjective===
 {{en-adj|-}}
-# Not [[belligerent]], [[aggressive]] or [[warlike]]
+
+# Not [[belligerent]], [[aggressive]] or [[warlike]].
 
 ===Noun===
 {{en-noun}}
-# A peaceful person, or a nation that is not at [[war]]
+
+# A peaceful person, or a nation that is not at [[war]].
 
 [[zh:nonbelligerent]]
