--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -78,6 +78,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Burmese: {{t+|my|ကျွန်း}}
 * Catalan: {{t+|ca|illa|f}}
 * Cebuano: {{t|ceb|pulo}}
+* Central Dusun: {{t|dtp|pulou}}
 * Central Melanau: {{t|mel|pulau}}
 * Chamicuro: {{t|ccc|yishla}}
 * Chechen: {{t|ce|гӏайре}}
@@ -170,9 +171,9 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Lombard: {{t|lmo|isula|f}}
 * Low German: {{t|nds|Insel|f}}, {{t|nds|Ailand|n}}
 *: Dutch Low Saxon: {{t+|nds-nl|eilaand|n}}
+{{trans-mid}}
 * Ludian: {{t|lud|suar'}}
 * Luganda: {{t|lg|ekizinga}}
-{{trans-mid}}
 * Luxembourgish: {{t|lb|Insel|f}}
 * Macedonian: {{t|mk|остров|m}}
 * Malagasy: {{t+|mg|nosy}}
