--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -467,13 +467,21 @@ From {{inh|osx|gem-pro|*batiz}}.
 
 ==Tok Pisin==
 
-===Etymology===
-{{etyl|en|tpi}} {{m|en|bed}}
+===Etymology 1===
+From {{etyl|en|tpi}} {{m|en|bed}}.
 
 ===Noun===
 {{head|tpi|noun}}
 
 # [[bed]]
+
+===Etymology 2===
+From {{etyl|en|tpi}} {{m|en|bet}}.
+
+===Noun===
+{{head|tpi|noun}}
+
+# [[bet]]
 
 ----
 
