--- a/en/m/mini.34065.wikitext
+++ b/en/m/mini.34065.wikitext
@@ -71,6 +71,18 @@ From {{inh|rup|la|mē}}, possibly through {{inh|rup|VL.||mēne|pos=a root}}, or 
 
 ----
 
+==Beli==
+
+===Noun===
+{{head|blm|noun}}
+
+# [[water]]
+
+===Further reading===
+* Deng Gideon Kol, John Majok Matuek, Tim Stirtz, ''[http://beli.webonary.org/ Beli Dictionary]'' (Juba, SIL-South Sudan, 2013)
+
+----
+
 ==Dakota==
 
 ===Alternative forms===
