--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -12,12 +12,12 @@ Of {{etyl|trk|en}} origin. Compare Turkish {{m|tr|balkan||wooded mountain range}
 ===Proper noun===
 {{en-proper noun}}
 
-# A [[geographical]] region in the southeast of Europe, roughly equivalent to the area covered by Serbia, Montenegro, Macedonia, Bosnia and Herzegovina, [[Kosovo]], Croatia, [[Bulgaria]], [[Albania]], [[Greece]] and sometimes [[Romania]].
+# A [[geographical]] region in the southeast of Europe, roughly equivalent to the area covered by [[Albania]], [[Bosnia and Herzegovina]], [[Bulgaria]], [[Croatia]], [[Greece]], [[Macedonia]], [[Montenegro]], [[Serbia]] (and [[Kosovo]]), sometimes  including [[Romania]] and [[Slovenia]].
 #* '''2002''' — Dennis P. Hupchick, ''The Balkans: From Constantinople to Communism'', p104
 #*: As the Ottomans' victories in the '''Balkans''' multiplied, increasing numbers of Anatolian warriors flocked to their ranks, and their territorial conquests grew.
 
 ====Usage notes====
-Used with the definite article {{m|en|the}}.
+* Used with the definite article {{m|en|the}} and construed as a plural.
 
 ====Synonyms====
 * {{sense|geographical region}} {{l|en|Balkan Peninsula}}
