--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -18,7 +18,7 @@ From {{etyl|enm|en}} {{m|enm|blo}}, {{m|enm|bloo}}, from {{etyl|ang|en}} {{m|ang
 
 ===Etymology 2===
 {{PIE root|en|bʰleh₁|id=blow}}
-From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to blow, breathe, inflate, sound}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blēaną||to blow}} (compare German {{m|de|blähen}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰleh₁-||to swell, blow up}} (compare {{cog|la|flō||to blow}}, {{cog|xcl|բեղուն||fertile}}, {{cog|sq|plas||to blow, explode}}).
+From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to blow, breathe, inflate, sound}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blēaną||to blow}} (compare German {{m|de|blähen}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰleh₁-||to swell, blow up}} (compare {{cog|la|flō||to blow}} and {{cog|xcl|բեղուն||fertile}}).
 
 ====Verb====
 {{en-verb|blows|blowing|blew|blown}}
