--- a/en/s/systemic circulation.856353.wikitext
+++ b/en/s/systemic circulation.856353.wikitext
@@ -2,7 +2,7 @@
 [[File:Circulatory system SMIL.svg|thumbnail|Heart and circulatory system:<br>'''systemic circulation''' on the right side; [[pulmonary circulation]] on the left side.]]
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # {{lb|en|anatomy}} The part of blood [[circulation]] which carries oxygenated blood away from the heart, to the body, and returns deoxygenated blood back to the heart.
 
