--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -21,5 +21,8 @@ From West African languages such as [[Ewe]], {{m|ln|fufú|}} meaning 'white-whit
 ====Synonyms====
 * {{sense|dish of yams etc}} [[choke-me]] {{qualifier|Caribbean}}
 
+===See also===
+* {{l|en|foo-foo band}}
+
 ===References===
 * Frederic Gomes Cassidy and Robert Brock Le Page (editors), ''Dictionary of Jamaican English‎'', Second Edition, University of the West Indies Press (2002), [http://books.google.com/books?id=_lmFzFgsTZYC&pg=PA185&dq=foo-foo page 185].
