--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -88,6 +88,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Malay: {{t|ms|wesel}}
 * Mazanderani: {{t|mzn|لسک|tr=lesk|sc=fa-Arab}}
 * Navajo: {{t|nv|dlǫ́ʼii}}
+* Old English: {{t|ang|wesle}}
 * Persian: {{t+|fa|راسو|tr=râsu|sc=fa-Arab}}
 * Polish: {{t+|pl|łasica|f}}
 * Portuguese: {{t+|pt|doninha|f}}
