--- a/en/j/Jacobin.855478.wikitext
+++ b/en/j/Jacobin.855478.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|frm|en}} {{m|fr|Jacobin}}, ultimately from {{etyl|la|en}} {{m|la|Jacōbus||Jacob}}.
+From {{etyl|frm|en}} {{m|fr|jacobin}}, ultimately from {{etyl|la|en}} {{m|la|Jacōbus||Jacob}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈdʒakəbɪn/|lang=en}}
