--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{suffix|en|whistle|er}}
+From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{inh|en|ang|hwistlere|t=a player on a flute; a piper}}, equivalent to {{suffix|en|whistle|er}}.
 
 ===Noun===
 {{wikipedia}}
