--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -6,11 +6,11 @@
 ===Noun===
 {{en-noun}}
 
-# A [[fish]] of [[Florida]] and the [[West Indies]] ({{taxlink|Platyglossus radiatus|species|noshow=1}}).
-# The [[ladyfish]] ({{taxlink|Harpe rufa|species|noshow=1}}) of the same region.
+# A [[fish]] of [[Florida]] and the [[West Indies]] ({{taxlink|Halichoeres radiatus|species|noshow=1}}).
+# The [[ladyfish]] ({{taxlink|Bodianus rufus|species|noshow=1}}) of the same region.
 
 {{Webster 1913}}
-
+[[Category:en:Wrasses]]
 ----
 
 ==Spanish==
