--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -65,6 +65,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{m|la|minimus||least, smal
 * Japanese: {{t+|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t+|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
 {{trans-mid}}
 * Latin: {{t+|la|minimum}}
+* Maori: {{t|mi|mōkito }}
 * Persian: {{t+|fa|حداقل|tr=hadd-e-aqall|sc=fa-Arab}}, {{t|fa|مینیمم|tr=minimom|sc=fa-Arab}}
 * Portuguese: {{t+|pt|mínimo|m}}
 * Romanian: {{t+|ro|minimum}}, {{t+|ro|minim|n}}
