--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -18,7 +18,8 @@ From {{etyl|la|it}} {{m|la|abacus||counting board}}, from {{etyl|grc|it}} {{m|gr
 
 ===Pronunciation===
 * {{IPA|/ˈa.ba.ko/|[ˈäːbäko̞]|lang=it}}
-* {{hyphenation|à|ba|co|lang=it}}
+* {{it-stress|àbaco}}
+* {{hyphenation|a|ba|co|lang=it}}
 
 ===Noun===
 {{it-noun|m}}
