--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -11,7 +11,7 @@
 ====Translations====
 {{trans-top|language}}
 * Armenian: {{t+|hy|լազերեն}}, {{t+|hy|ճաներեն}}
-* Georgian: {{t|ka|ლაზური}}
+* Georgian: {{t|ka|ლაზური}}, {{t|ka|ლაზური ენა}}
 * Laz: {{t|lzz|ლაზური ნენა}}
 {{trans-mid}}
 * Russian: {{t+|ru|ла́зский|m}}
