--- a/en/p/Pax Americana.855982.wikitext
+++ b/en/p/Pax Americana.855982.wikitext
@@ -2,11 +2,12 @@
 {{wikipedia}}
 
 ===Etymology===
-Latin. By analogy with [[Pax Romana]].
+Latin. By analogy with {{m|en|Pax Romana}}.
 
 ===Proper noun===
 {{en-proper noun}}
-# The period of relative peace in the Western world since the end of World War II in 1945, coinciding with the military and economic dominance of the United States.
+
+# {{lb|en|historical}} The period of relative peace in the Western world since the end of World War II in 1945, coinciding with the military and economic dominance of the United States.
 
 ====Translations====
 {{trans-top}}
