--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -246,7 +246,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 19th century - Obscure, possibly from {{etyl|de|fr}} {{m|de|staffieren}} or Old French {{m|fro|estofer}} (modern French {{m|fr|étoffer}})
 
 ====Pronunciation====
-* {{IPA|/staf/|lang=fr}}
+* {{fr-IPA}}
 
 ====Noun====
 {{fr-noun|m}}
