--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -134,7 +134,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Swedish: {{t+|sv|böja}}, {{t+|sv|krokna}}
 * Turkish: {{t+|tr|bükmek}}
 * Walloon: {{t+|wa|ployî}}, {{t+|wa|verdjî}}
-* Westrobothnian: {{t|gmq-bot|vinken}}
+* Westrobothnian: {{t|gmq-bot|vinken}}, {{t|gmq-bot|krönkän}}
 * Yiddish: {{t|yi|בייגן|alt=בייגן זיך}}
 {{trans-bottom}}
 
