--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -24,7 +24,7 @@
 * Romanian: {{t+|ro|fârtat|m}}
 * Russian: {{t+|ru|закады́чный друг|m}}, {{t|ru|бли́зкий друг|m}}
 * Scottish Gaelic: {{t|gd|goistidh|m}} {{qualifier|male}}, {{t|gd|bana-ghoistidh|m}} {{qualifier|female}}
-* Spanish: {{t|es|amigo del alma|m}}
+* Spanish: {{t|es|amigo del alma|m}}, {{t|es|amiga del alma|f}}
 * Vietnamese: {{t+|vi|tri kỷ}}
 {{trans-bottom}}
 
