--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -23,6 +23,7 @@
 * Italian: {{t|it|amico per la pelle|m}}
 {{trans-mid}}
 * Japanese: {{t+|ja|親友|tr=しんゆう, shin'yū|sc=Jpan}}, {{t|ja|親しい友達|tr=したしいともだち, shitashii tomodachi|sc=Jpan}}, {{t|ja|心安い友人|tr=こころやすいゆうじん, kokoroyasui yūjin|sc=Jpan}}
+* Polish: {{t|pl|przyjaciel od serca}}
 * Romanian: {{t+|ro|fârtat|m}}
 * Russian: {{t+|ru|закады́чный друг|m}}, {{t|ru|бли́зкий друг|m}}
 * Scottish Gaelic: {{t|gd|goistidh|m}} {{qualifier|male}}, {{t|gd|bana-ghoistidh|m}} {{qualifier|female}}
