--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -23,7 +23,7 @@
 * Italian: {{t|it|amico per la pelle|m}}
 {{trans-mid}}
 * Japanese: {{t+|ja|親友|tr=しんゆう, shin'yū|sc=Jpan}}, {{t|ja|親しい友達|tr=したしいともだち, shitashii tomodachi|sc=Jpan}}, {{t|ja|心安い友人|tr=こころやすいゆうじん, kokoroyasui yūjin|sc=Jpan}}
-* Kannada: {{t+|kn|ಆಪ್ತಮಿತ್ರ}}
+* Kannada: {{t+|kn|ಆಪ್ತಮಿತ್ರ}}, {{t+|kn|ಪ್ರಾಣಸ್ನೇಹಿತ}}
 * Polish: {{t|pl|przyjaciel od serca}}, {{t|pl|przyjaciółka od serca|f}}
 * Romanian: {{t+|ro|fârtat|m}}
 * Russian: {{t+|ru|закады́чный друг|m}}, {{t|ru|бли́зкий друг|m}}
