--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -17,8 +17,8 @@ Borrowed from {{bor|en|fr|quatorze|notext=1}}.
 From {{inh|fr|fro|quatorze}}, from {{inh|fr|la|quattuordecim}}.
 
 ===Pronunciation===
+* {{fr-IPA}}
 * {{audio|Fr-quatorze.ogg|audio|lang=fr}}
-* {{IPA|lang=fr|/ka.tɔʁz/}}
 
 ===Numeral===
 {{head|fr|numeral}}
