--- a/en/b/betted.6796.wikitext
+++ b/en/b/betted.6796.wikitext
@@ -6,5 +6,5 @@
 ===Verb===
 {{head|en|verb form|cat2=past participles}}
 
-# {{en-simple past of|bet}}
-# {{inflection of|bet||past|part|lang=en}}
+# {{label|archaic}} {{en-simple past of|bet}}
+# {{label|archaic}} {{inflection of|bet||past|part|lang=en}}
