--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -7,7 +7,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 ===Pronunciation===
 * {{IPA|/pledʒ/|lang=en}}
 * {{audio|en-us-pledge.ogg|Audio (US)|lang=en}}
-* {{rhymes|ɛdʒ|lang=en}}
+* {{rhymes|edʒ|lang=en}}
 <!-- 1 syllable words !-->
 
 ===Verb===
