--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -4,7 +4,7 @@
 From {{inh|grc|ine-pro|*ḱwṓ}}. Cognates include {{cog|la|canis}}, {{cog|sa|श्वन्|tr=śván}} and {{cog|ang|hund}} ({{cog|en|hound}}). The final {{m|grc||-ν}} in the nominative singular which was absent in {{m|ine-pro|*ḱwṓ}} was restored in Greek by analogy to other forms in the paradigm.
 
 ===Pronunciation===
-{{grc-IPA|w=κύ˘ων}}
+{{grc-IPA|κύ˘ων}}
 
 ===Noun===
 {{grc-noun|head=κῠ́ων|κῠνός|m|g2=f|third}}
