--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -23,47 +23,8 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 * {{sense|agreement}} {{l|en|yes}}, {{l|en|yep}}, {{l|en|yup}}, {{l|en|aye}}, {{l|en|ya}}, {{l|en|yea}}, {{l|en|uh-huh}}
 * {{sense|joy}} {{l|en|hurrah}}, {{l|en|hurray}}, {{l|en|woohoo}}, {{l|en|yay}}, {{l|en|yippee}}<!--etc-->
 
-====Translations====
-''Note: Many languages have no equivalent of this word; in those cases, the translations given here are for'' '''yes'''.
-{{trans-top|yes}}
-* Arabic: {{t|ar|أَيْوَة}} {{qualifier|Eastern Arabic}}, {{t|ar|إِيَّة}} {{qualifier|Western Arabic}}, {{t+|ar|آ}} {{qualifier|Egyptian Arabic}}
-* Azeri: {{t|az|həri}}
-* Catalan: {{t+|ca|sí}}
-* Chinese:
-*: Mandarin: {{t+|cmn|是啊|tr=shì a|sc=Hani}}, {{t|cmn|[[對]][[啊]]|sc=Hani}}, {{t|cmn|[[对]][[啊]]|tr=duì a|sc=Hani}}, {{t+|cmn|啊|tr=à|sc=Hani}}, {{t+|cmn|嗯|tr=ǹg|sc=Hani}}
-* Czech: {{t+|cs|jo}}, {{t+|cs|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
-* Dutch: {{t+|nl|ja}}, {{t+|nl|jawel}}
-* Finnish: {{t+|fi|joo}}, {{t+|fi|juu}}
-* French: {{t+|fr|ouais}}
-* German: {{qualifier|yeah:}} {{t+|de|jo}}, {{t|de|joa}}; {{qualifier|yes:}} {{t+|de|ja}}
-* Greek: {{t+|el|ναι}}
-* Hindi: {{t+|hi|हाँ|tr=hā̃|sc=Deva}}
-* Hungarian: {{t+|hu|igen}}
-* Icelandic: {{t+|is|já}}
-* Interlingua: {{t+|ia|si}}
-* Italian: {{t+|it|si}}, {{t+|it|già}}
-* Japanese: {{t|ja|うん|tr=un}}, {{t+|ja|そう|tr=sō}}, {{t+|ja|ええ|tr=ē}}, {{t+|ja|ああ|tr=ā}}
-* Korean: {{t+|ko|응}}, {{t+|ko|네}}, {{t+|ko|예}}, {{t+|ko|응}}, {{t+|ko|어}}
-{{trans-mid}}
-* Navajo: {{t|nv|wehee}}
-* Norwegian: {{t+|no|ja}}, {{t|no|yeah}}
-* Persian: {{t+|fa|بله|tr=bale}}, {{t+|fa|آره|tr=âre|sc=fa-Arab}}
-* Polish: {{t+|pl|tak}}, {{t+|pl|no}}<!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->, {{t+|pl|ta|m}} {{qualifier|colloquial}}, {{t+|pl|aha|m}}, {{t+|pl|acha}}
-* Portuguese: {{t+|pt|sim}}
-* Russian: {{t+|ru|ага́}}, {{t+|ru|ага́|tr=ahá}}, {{t+|ru|угу́}}, {{t+|ru|угу́|tr=uhú}}, {{t+|ru|так}}, {{t+|ru|ну}}
-* Serbo-Croatian: {{t+|sh|da}} {{t+|sh|da}}
-*: Cyrillic: {{t|sh|dа|sc=Cyrl}}
-*: Roman: {{t+|sh|da|sc=Latn}}
-* Slovak: {{t|sk|no}} <!-- Yes, this is in the right place, "no" means "yeah" or "yep" in Czech, Slovak, Polish -->
-* Slovene: {{t+|sl|ja}}
-* Spanish: {{t+|es|sí}}
-* Swedish: {{t+|sv|ja|n}}
-* Thai: {{t+|th|เออ}}
-* Urdu: {{t|ur|ہاں|tr=hā̃|sc=ur-Arab}}
-* Vietnamese: {{t|vi|ừ}} {{qualifier|informal}}, {{t+|vi|ờ}} {{qualifier|informal}}
-* Volapük: {{t+|vo|si}}
-* Welsh: {{t|cy|iah}}
-{{trans-bottom}}
+====Yeah====
+yeah
 
 ===Yeah===
 yeah
