--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -16,6 +16,7 @@
 ====Translations====
 {{trans-top|crazy or insane when affected by the phases of the Moon}}
 * Danish: {{t|da|månesyg|c}}
+* French: {{t+|fr|lunatique|m|f}}
 * Italian: {{t+|it|lunatico|m}} {{qualifier|obsolete}}
 {{trans-mid}}
 * Russian: {{t+|ru|лунатик|m|sc=Cyrl}}
