--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -335,8 +335,8 @@ From {{af|eo|simpla|-e}}.
 From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|simplex|notext=1}}.
 
 ===Pronunciation===
+* {{fr-IPA}}
 * {{audio|Fr-simple.ogg|audio|lang=fr}}
-* {{IPA|/sɛ̃pl/|lang=fr}}
 
 ===Adjective===
 {{fr-adj}}
