--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -128,6 +128,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 
 {{trans-top|to bind ot lock in position}}
 {{trans-mid}}
+* Maori: {{t|mi|parerori}} {{qualifier|as with muscles during a cramp}}
 {{trans-bottom}}
 
 ===References===
