--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -50,6 +50,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Swedish: {{t+|sv|vad|n}}
 * Tagalog: {{t|tl|patnaw}}, {{t|tl|pusta}}
 * Telugu: {{t+|te|పందెము}}
+* Thai: {{t|th|เดิมพัน}}
 * Turkish: {{t-needed|tr}}
 {{trans-bottom}}
 
